adjust service query
